--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_1"
         android:label="@string/app_name"
-        android:theme="@style/notitle" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".ConnectBluet"
             android:label="@string/app_name">
